[tool.poetry]
name = "phaseshifterarraygenerate"
version = "0.1.0"
description = ""
authors = ["feikon <12680994+feikon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
